Bug 1814291 - Grab the pointer for popups under FVWM. r=emilio a=pascalc

Without pointer grabs, it's possible to move the pointer into a popup
element and use it, but if the pointer leaves even for a moment, the
popup will be dismissed.  This seems to be a FVWM-specific quirk
(see bug for more info); other WMs with focus-follows-mouse policies
(Openbox, XFWM4) handle focus changes differently and aren't affected.
To avoid that, this patch turns pointer grabbing back on if we detect
FVWM.

Differential Revision: https://phabricator.services.mozilla.com/D168495